--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
         </div>
       </div>
       <nav>
-        <button id="authBtn" class="btn" aria-label="Sign in with Google">Sign in</button>
+        <!-- ✅ Updated buttons -->
+        <button id="authBtn" class="btn" aria-label="Sign in with email">Sign in</button>
+        <button id="signUpBtn" class="btn ghost" aria-label="Sign up with email">Sign up</button>
         <button id="signOutBtn" class="btn ghost" hidden aria-label="Sign out">Sign out</button>
       </nav>
     </header>
@@ -86,5 +88,18 @@
       </div>
     </article>
   </template>
+  <!-- Auth Modal -->
+<div id="authModal" class="modal hidden">
+  <div class="modal-content">
+    <h2 id="modalTitle">Sign In</h2>
+    <form id="authForm">
+      <input type="email" id="modalEmail" placeholder="Email" required />
+      <input type="password" id="modalPassword" placeholder="Password" required />
+      <button type="submit" class="btn primary">Continue</button>
+      <p id="modalMessage" class="form-status"></p>
+    </form>
+    <button id="closeModal" class="btn ghost">Cancel</button>
+  </div>
+</div>
 </body>
 </html>
