--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>WanderShare — Community Travel</title>
   <link rel="stylesheet" href="styles.css" />
   <script type="module" src="main.js" defer></script>
+  <link rel="icon" href="data:,">
 </head>
 <body>
   <div class="wrap">
